--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,110 +1,75 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-    	"padding": {
-    	    "top": 3
-    	},
-      	"height": 8
+        "source": "~/.config/fastfetch/ascii.txt",
+            "color": {
+        "1": "1"
+    }
     },
     "display": {
-          "separator": " ➜  "
+        "separator": " "
     },
     "modules": [
-        "break",
-        "break",
-        "break",
-         {
+        {
+            "type": "break",
+            "key": "",
+            "keyColor": "",
+        },
+        {
             "type": "os",
-            "key": "OS   ",
-            "keyColor": "31",
+            "key": " ",
+            "keyColor": "1",
         },
         {
             "type": "kernel",
-            "key": " ├  ",
-            "keyColor": "31",
+            "key": " ",
+            "keyColor": "1",
         },
         {
             "type": "packages",
-            "format": "{} (pacman)",
-            "key": " ├ 󰏖 ",
-            "keyColor": "31",
+            "key": " ",
+            "keyColor": "1",  
         },
         {
             "type": "shell",
-            "key": " └  ",
-            "keyColor": "31",
-        },
-        "break",
-        {
-            "type": "wm",
-            "key": "WM   ",
-            "keyColor": "33",
-        },
-        {
-            "type": "wmtheme",
-            "key": " ├ 󰉼 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "icons",
-            "key": " ├ 󰀻 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "cursor",
-            "key": " ├  ",
-            "keyColor": "33",
+            "key": " ",
+            "keyColor": "1", 
         },
         {
             "type": "terminal",
-            "key": " ├  ",
-            "keyColor": "33",
+            "key": " ",
+            "keyColor": "1", 
+        },
+        {
+            "type": "wm",
+            "key": " ",
+            "keyColor": "1", 
+        },
+        {
+            "type": "cursor",
+            "key": " ",
+            "keyColor": "1", 
         },
         {
             "type": "terminalfont",
-            "key": " └  ",
-            "keyColor": "33",
-        },
-        "break",
-        {
-            "type": "board",
-            "format": "{1} Type {2}",
-            "key": "PC   ",
-            "keyColor": "32",
+            "key": " ",
+            "keyColor": "1", 
         },
         {
-            "type": "cpu",
-            "format": "{1} ({3}) @ {7} GHz",
-            "key": " ├  ",
-            "keyColor": "32",
+            "type": "datetime",
+            "format": "{1}-{3}-{11}",
+            "key": " ",
+            "keyColor": "1", 
         },
-        {
-            "type": "gpu",
-            "format": "{1} {2} @ {12} GHz",
-            "key": " ├ 󰢮 ",
-            "keyColor": "32",
-        },
-        {
+                {
             "type": "memory",
-            "key": " ├  ",
-            "keyColor": "32",
+            "key": "󰍛 ",
+            "keyColor": "1"
         },
-        {
-            "type": "swap",
-            "key": " ├ 󰓡 ",
-            "keyColor": "32",
-        },
-        {
-            "type": "disk",
-            "key": " ├ 󰋊 ",
-            "keyColor": "32",
-        },
-        {
+                {
             "type": "monitor",
-            "key": " └  ",
-            "keyColor": "32",
+            "key": " ",
+            "keyColor": "1",
         },
-        "break",
-        "break",
-    ]
+        ]
 }
