fontes em negrito e mudança no visual da waybar

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,7 +9,7 @@
 # you can get started by copying this config to ~/.config/hypr/hyprlock.conf
 #
 
-$font = Monospace
+$font = FiraCode Nerd Font Bold
 
 general {
     hide_cursor = false
@@ -49,7 +49,7 @@ input-field {
     check_color = rgba(fbf1c7ee) rgba(fbf1c7ee) 120deg
     fail_color = rgba(fbf1c7ee) rgba(fbf1c7ee) 40deg
 
-    font_color = rgb(143, 143, 143)
+    font_color = rgba(fbf1c7ee)
     fade_on_empty = false
     rounding = 15
 
@@ -75,7 +75,8 @@ label {
     monitor =
     text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
     font_size = 50
-    font_family = FiraCode Nerd Font Bold
+    font_family = $font
+    color = rgba(fbf1c7ee)
 
     position = -860, -300
     halign = right
