--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,6 +183,7 @@ bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, TAB, exec, killall waybar || waybar
 bind = , Print, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
+bind = $mainMod, ESCAPE, exec, hyprlock
 
 # Move focus with vim motions
 bind = $mainMod, h, movefocus, l
