--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Imagens/Wallpapers/002.jpg
-wallpaper = HDMI-A-1,~/Imagens/Wallpapers/002.jpg
+preload = ~/Imagens/Wallpapers/001.png
+wallpaper = HDMI-A-1,~/Imagens/Wallpapers/001.png
 splash = false
