--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ env TERM xterm-256color
 window_margin_width 5
 window_margin_height 5
 
-font_family FiraCode Nerd Font
+font_family FiraCode Nerd Font Bold
 bold_font auto
 italic_font auto
 bold_italic_font auto
