--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ unbind '"'
 bind-key - split-window -c "#{pane_current_path}"
 bind-key | split-window -h -c "#{pane_current_path}"
 
+set-option -g status-position top
+
 bind-key -r h resize-pane -L 10
 bind-key -r j resize-pane -D 10
 bind-key -r k resize-pane -U 10
