--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -184,7 +184,7 @@ bind = $mainMod, TAB, exec, killall waybar || waybar
 bind = , Print, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 bind = $mainMod, ESCAPE, exec, hyprlock
-bind = $mainMod, period, exec, rofimoji
+bind = $mainMod, period, exec, rofimoji --action copy
 
 # Move focus with vim motions
 bind = $mainMod, h, movefocus, l
