adição dos icones em segundo plano na waybar (tray)

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -11,7 +11,7 @@
 
     "modules-center": ["clock",],
 
-    "modules-right": ["pulseaudio","network",],
+    "modules-right": ["tray","pulseaudio","network",],
 
     "clock": {
 	"format": "{:%H:%M:%S}",
@@ -24,7 +24,7 @@
         "format": "{icon}  {volume}%",
         "format-muted": "  0%",
         "format-icons": {
-            "default": ["", "", ""]
+        "default": ["", "", ""]
         },
         "on-click": "hyprctl dispatch exec '[float; size 800 512; center] pavucontrol'",
 	"on-click-right": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
@@ -35,6 +35,13 @@
         "format-ethernet": " ",
         "format-disconnected": "No Signal",
         "format-alt": "{ipaddr}"
-     },
+    },
+
+    "tray": {
+    "icon-size": 15,
+    "spacing": 10,
+    "show-passive-items": false,
+    "expand": false
+    }
 
 }
