--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -171,6 +171,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
+bind = ALT_L, F4, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
