super tab esconde a waybar sem finalizar a tarefa

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -181,11 +181,12 @@ bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod, P, exec, nwg-bar
 bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod, TAB, exec, killall waybar || waybar
+bind = $mainMod, TAB, exec, pkill -SIGUSR1 waybar
 bind = , Print, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 bind = $mainMod, ESCAPE, exec, hyprlock
 bind = $mainMod, period, exec, rofimoji --max-recent 0 --no-frecency --action copy
+bind = ALT_L, TAB, exec, rofi -show window
 
 # Move focus with vim motions
 bind = $mainMod, h, movefocus, l
