--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,8 +25,8 @@ $browser = brave
 
 # [AUTOSTART]
 
-exec-once = hyprpaper
 exec-once = waybar
+exec-once = swww-daemon
 
 # [ENVIRONMENT VARIABLES]
 
@@ -187,6 +187,9 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 bind = $mainMod, ESCAPE, exec, hyprlock
 bind = $mainMod, period, exec, rofimoji --max-recent 0 --no-frecency --action copy
 bind = ALT_L, TAB, exec, rofi -show window
+bind = $mainMod, right, exec, ~/.config/hypr/scripts/swww-random.sh
+bind = $mainMod, right, exec, ~/.config/hypr/scripts/swww-random.sh
+bind = $mainMod SHIFT, R, exec, hyprctl reload
 
 # Move focus with vim motions
 bind = $mainMod, h, movefocus, l
