--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -187,8 +187,8 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 bind = $mainMod, ESCAPE, exec, hyprlock
 bind = $mainMod, period, exec, rofimoji --max-recent 0 --no-frecency --action copy
 bind = ALT_L, TAB, exec, rofi -show window
-bind = $mainMod, right, exec, ~/.config/hypr/scripts/swww-random.sh
-bind = $mainMod, right, exec, ~/.config/hypr/scripts/swww-random.sh
+bind = $mainMod, right, exec, ~/.config/hypr/scripts/swww-next.sh
+bind = $mainMod, left, exec, ~/.config/hypr/scripts/swww-prev.sh
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 
 # Move focus with vim motions
